[gd_scene format=3 uid="uid://bgu8pl8t1t1ry"]

[ext_resource type="Script" uid="uid://c2sex0hy5b1bc" path="res://old_scenes/options_menu.gd" id="1_liyum"]
[ext_resource type="Shader" uid="uid://cat2ottxy70lo" path="res://old_scenes/blur_background.gdshader" id="2_hm4m4"]
[ext_resource type="Texture2D" uid="uid://dm43phh8u0nne" path="res://assets/icons/GuiClose.svg" id="2_ijpji"]
[ext_resource type="Texture2D" uid="uid://bx3uyoep6wlt3" path="res://assets/ui/uipackSpace_sheet.png" id="3_lfjc7"]
[ext_resource type="AudioStream" uid="uid://csdwendp14tsm" path="res://assets/sfx/ui-select.ogg" id="5_k61yy"]
[ext_resource type="AudioStream" uid="uid://bgkx1bxqrhduf" path="res://assets/sfx/ui-open.ogg" id="6_7txom"]
[ext_resource type="AudioStream" uid="uid://qpoe4l73oh8x" path="res://assets/sfx/ui-hide.ogg" id="7_binsn"]
[ext_resource type="AudioStream" uid="uid://q4mjquy6hd6c" path="res://assets/sfx/xp_pickup_trimmed.wav" id="8_7txom"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lfjc7"]
shader = ExtResource("2_hm4m4")
shader_parameter/blur = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3xsyx"]
atlas = ExtResource("3_lfjc7")
region = Rect2(0, 400, 100, 100)

[sub_resource type="LabelSettings" id="LabelSettings_dhn0l"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k61yy"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7txom"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_binsn"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2f1bn"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_i80p0"]
font_color = Color(0, 0, 0, 1)

[node name="OptionsMenuLayer" type="CanvasLayer"]
script = ExtResource("1_liyum")

[node name="BackgroundBlur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_lfjc7")
offset_right = 1280.0
offset_bottom = 800.0

[node name="MenuBackgroundRect" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -119.0
offset_right = 270.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_3xsyx")
patch_margin_left = 11
patch_margin_top = 31
patch_margin_right = 11
patch_margin_bottom = 11

[node name="OptionsMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -86.0
offset_right = 250.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterLabels" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="OptionsMenu/VBoxContainer/MasterLabels"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Master Volume"
label_settings = SubResource("LabelSettings_dhn0l")

[node name="MasterValue" type="Label" parent="OptionsMenu/VBoxContainer/MasterLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "00%"
label_settings = SubResource("LabelSettings_k61yy")
horizontal_alignment = 2

[node name="MasterSlider" type="HSlider" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="MusicLabels" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2

[node name="Music" type="Label" parent="OptionsMenu/VBoxContainer/MusicLabels"]
layout_mode = 2
text = "Music Volume"
label_settings = SubResource("LabelSettings_7txom")

[node name="MusicValue" type="Label" parent="OptionsMenu/VBoxContainer/MusicLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "00%"
label_settings = SubResource("LabelSettings_binsn")
horizontal_alignment = 2

[node name="MusicSlider" type="HSlider" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="SFXLabels" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2

[node name="SFX" type="Label" parent="OptionsMenu/VBoxContainer/SFXLabels"]
layout_mode = 2
text = "SFX Volume"
label_settings = SubResource("LabelSettings_2f1bn")

[node name="SFXValue" type="Label" parent="OptionsMenu/VBoxContainer/SFXLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "00%"
label_settings = SubResource("LabelSettings_i80p0")
horizontal_alignment = 2

[node name="SFXSlider" type="HSlider" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Mute" type="CheckBox" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.39308554, 0.3930855, 0.39308548, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.39215687, 0.39215687, 0.39215687, 1)
theme_override_colors/font_hover_pressed_color = Color(0.39215687, 0.39215687, 0.39215687, 1)
text = "Mute"

[node name="CloseButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_top = 16.0
offset_right = -40.0
offset_bottom = 40.0
grow_horizontal = 0
scale = Vector2(2, 2)
icon = ExtResource("2_ijpji")

[node name="HoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_k61yy")
bus = &"2_SFX"

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7txom")
bus = &"2_SFX"

[node name="CloseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_binsn")
bus = &"2_SFX"

[node name="XPPickupSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_7txom")
bus = &"2_SFX"

[connection signal="mouse_entered" from="OptionsMenu/VBoxContainer/MasterSlider" to="." method="_on_button_hover"]
[connection signal="value_changed" from="OptionsMenu/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="mouse_entered" from="OptionsMenu/VBoxContainer/MusicSlider" to="." method="_on_button_hover"]
[connection signal="value_changed" from="OptionsMenu/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="OptionsMenu/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="mouse_entered" from="OptionsMenu/VBoxContainer/SFXSlider" to="." method="_on_button_hover"]
[connection signal="value_changed" from="OptionsMenu/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="mouse_entered" from="OptionsMenu/VBoxContainer/Mute" to="." method="_on_button_hover"]
[connection signal="toggled" from="OptionsMenu/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="mouse_entered" from="CloseButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
